2021-08-27  Oliver Kiddle  <opk@zsh.org>

	* Marlon: 49272: Completion/Base/Utility/_call_program:
	Set $COLUMNS in _call_program to ensure cached command
	output is sufficiently wide

	* unposted (based on Marlon: 49273):
	Completion/Zsh/Command/_typeset: add -x to local completion

	* 49309: Completion/Linux/Command/_strace: update the
	strace completion through strace 5.13

	* 49306: Completion/Linux/Command/_losetup: fix file
	completion for the second parameter to losetup

	* Štěpán Němec: 49234: Completion/Unix/Command/_python:
	add missing options in python completion

2021-08-26  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 49307 with documentation updated: Src/exec,
	Doc/Zsh/grammar.yo, Doc/Zsh/options.yo: With POSIX_TRAPS,
	ignored signals stay that way in subshell.

2021-08-24  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 49297 with quoting updated: Src/Modules/files.c: check
	which files is in error when ENOENT on link etc.

2021-08-24  dana  <dana@dana.is>

	* github #78: DCsunset: Completion/Unix/Command/_pandoc: Fix
	completions in _pandoc

2021-08-16  Oliver Kiddle  <opk@zsh.org>

	* 49268: Completion/Unix/Command/_texinfo: use an empty string search
	to find matches for info --index-search= completion

	* 49160: Completion/Unix/Command/_xmlsoft: fix quoting for
	xmllint --pretty completion

2021-08-14  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* users/26734: Doc/Zsh/builtins.yo: docs: read: Notate the
	parameter name argument as optional.

2021-08-10  Peter Stephenson  <p.stephenson@samsung.com>

	* 49269: Src/parse.c, Test/C02cond.ztst: "[ ! -o ]" should
	detect "-o" as a non-empty string and return status 1.  Update
	test to reflect this.

2021-07-30  dana  <dana@dana.is>

	* github #77: Stavros Ntentos: Completion/X/Command/_sublimetext:
	Improve subl completions for Sublime Text v4

2021-07-30  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 49211: Completion/Zsh/Command/_typeset: correctly set return value
