@@ -1,3 +1,9 @@
+2021-08-27  Peter Stephenson  <p.stephenson@samsung.com>
+
+	* 49290: Src/init.c, Src/input.c: Replace stdio for buffered
+	shell input to avoid memory management interacting with signal
+	handlers.
+
 2021-08-27  Oliver Kiddle  <opk@zsh.org>
 
 	* Marlon: 49272: Completion/Base/Utility/_call_program:
